[package]
name = "ghlink"
version = "0.2.15"
authors = ["Matthew Dargan <matthewdargan57@gmail.com>"]
edition = "2021"
description = "Create GitHub permanent links to specified file lines"
repository = "https://github.com/matthewdargan/ghlink"
license = "BSD-3-Clause"
keywords = ["git", "github"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
gix = "0.62.0"

[lints.clippy.pedantic]
level = "warn"
