[package]
name = "ghlink"
version = "0.2.20"
authors = ["Matthew Dargan <matthewdargan57@gmail.com>"]
edition = "2021"
description = "Create GitHub permanent links to specified file lines"
repository = "https://github.com/matthewdargan/ghlink"
license = "BSD-3-Clause"
keywords = ["git", "github"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
gix = "0.63.0"

[dev-dependencies]
gix-testtools = "0.13.0"
regex = "1.10.4"
serial_test = "3.1.1"
tempfile = "3.10.1"

[lints.clippy.pedantic]
level = "warn"
